test/libsolidity/syntaxTests/nameAndTypeResolution/175_uninitialized_const_variable.sol
contract Foo {
    uint constant y;
}
// ----
// TypeError 4266: (19-34='uint constant y'): Uninitialized "constant" variable.
